- Fixed Brood of Nozdormu rep rings not showing up in Solo route
- Fixed 'Quest Completion' warnings not showing up for Brood of Nozdormu rep ring quests
- Fixed Optional quests not checking if actual quest objectives are done, before turning green
- Added Tooltips to items that are used in TBCPrep routes (Can be toggled in settings)
- Added Seeping Corruption to the Solo guide

3.10
- Fixed lua error with comment
- Fixed bankdeposit to only show when item is in the bags
- Fixed Dire Maul goto for Reliquary
- Removed .complete for the Deserteur quest

3.9
- Due to PTR tests moved The Twilight Lexicon back to questlog quest.
- > Moved The Heart of the Mountain to optional (Solo,Main)
- > Moved The Scarlet Oracle, Demetria to optional and removed steps in Questprep (Strat)
- Added Secondary Professions in Extras tab
- Added Optional Tag for Lost Thunderbew Recipe (Solo)
- Reworked Dungeon waypoints to be more clear
- Added fully working Horde TBC Dungeon Grind Guide which is available with prepatch/TBC patch
- Minor bug fixes in the guides and waypoints

3.8
- Three 'Extras' tabs implemented
- > Extra - Flights: You can check if you have all needed flightpaths for the routes
- > Extra - Items: A list of special vanilla (60) items you can collect before TBC
- > Extra - Professions: A list of usable professions for your class/specs
- Fixed UI Layout - Tabs now properly align with the frame border, and the scroll content now fully fills out the frame, so more stuff is visible
- Moved 'AV/Tarren Mill' later to make use of the scaling exp better
- Fixed a bug where item tooltips were 'escaping' the window and blocking bags
- Rewritten optional text for certain quests
- Added tbc tag for all guides
- Minor bug fixes in the rxp guides

3.7
- You can now search on the "Quests" and "Items" tab. You can search for a lot of fields. Let us know if you find any issues with this!
- Minor Bug fixes

3.6