@@ -62,7 +62,7 @@ local questsMetadata = {
 	[8283] = { id=8283, name="Wanted - Deathclasp, Terror of the Sands", baseexp=11600, exp=0, qlvl=59, type="turnin", routes="Main,Strat,Solo", routeSection="SilithusHold2", areaType="Zone", area="Silithus", comments="Has a short 2 min respawn timer. The quest is worth ~4½ minutes of SlavePens :) You can decide if you wanna wait or fight for a tag" },
 	[9444] = { id=9444, name="Defiling Uther's Tomb", baseexp=11250, exp=0, qlvl=58, type="optional", reqItems="23691-1", preQuests="9443", routes="Main,Strat,Solo", routeSection="WPLBulwark", areaType="Zone", area="Western Plaguelands", comments="Isn't available until pre-patch" },
 	[2681] = { id=2681, name="The Stones That Bind Us", baseexp=10900, exp=0, qlvl=57, type="optional", preQuests="2784,2621,2622,2623,2801", routes="Main,Strat,Solo", routeSection="oldhero", areaType="Zone", area="Blasted Lands", },
-	[9229] = { id=9229, name="The Fate of Ramaladni", baseexp=9550, exp=0, qlvl=60, type="optional", reqItems="22708-1", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Raid", area="Naxxramas", },
+	[9229] = { id=9229, name="The Fate of Ramaladni", baseexp=9550, exp=0, qlvl=60, type="optional", reqItems="22708-1", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Raid", area="Naxxramas", comments="Requires Raiding Naxxramas. Is not included in the RXP guides" },
 	[8310] = { id=8310, name="Breaking the Code", baseexp=9550, exp=0, qlvl=60, type="optional", reqItems="20457-1,20458-1,20459-1", preQuests="8304", routes="Main,Strat,Solo", routeSection="SilithusSouth", areaType="Zone", area="Silithus", },
 	[8309] = { id=8309, name="Glyph Chasing", baseexp=9550, exp=0, qlvl=60, type="optional", reqItems="20453-1,20455-1,20454-1,20456-1", preQuests="8304", routes="Main,Strat,Solo", routeSection="SilithusSouth", areaType="Zone", area="Silithus", },
 	[8288] = { id=8288, name="Only One May Rise", baseexp=9550, exp=0, qlvl=60, type="optional", reqItems="20383-1", preQuests="8286", routes="Main,Strat,Solo", routeSection="SilithusHold2", areaType="Raid", area="Blackwing Lair", },
@@ -101,8 +101,8 @@ local questsMetadata = {
 	[9141] = { id=9141, name="They Call Me \"The Rooster\"", baseexp=4750, exp=0, qlvl=60, type="turnin", reqItems="12844-1", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Zone", area="Eastern Plaguelands", },
 	[5513] = { id=5513, name="Mantles of the Dawn", baseexp=9550, exp=0, qlvl=60, type="turnin", reqItems="12844-10", reqRep=529, reqRepRank=7, routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Zone", area="Eastern Plaguelands", },
 	[5517] = { id=5517, name="Chromatic Mantle of the Dawn", baseexp=11900, exp=0, qlvl=60, type="turnin", reqItems="12844-25", reqRep=529, reqRepRank=8, routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Zone", area="Eastern Plaguelands", },
-	[9232] = { id=9232, name="The Only Song I Know...", baseexp=9550, exp=0, qlvl=60, type="turnin", reqItems="22682-2,7080-2,12361-2", preQuests="9033", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Raid", area="Naxxramas", },
-	[9230] = { id=9230, name="Ramaladni's Icy Grasp", baseexp=9550, exp=0, qlvl=60, type="turnin", reqItems="22682-1,12361-1,12360-1", preQuests="9033,9229", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Raid", area="Naxxramas", },
+	[9232] = { id=9232, name="The Only Song I Know...", baseexp=9550, exp=0, qlvl=60, type="turnin", reqItems="22682-2,7080-2,12361-2", preQuests="9033", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Raid", area="Naxxramas", comments="Requires Raiding Naxxramas. Is not included in the RXP guides" },
+	[9230] = { id=9230, name="Ramaladni's Icy Grasp", baseexp=9550, exp=0, qlvl=60, type="turnin", reqItems="22682-1,12361-1,12360-1", preQuests="9033,9229", routes="Main,Strat,Solo", routeSection="EPLTown", areaType="Raid", area="Naxxramas", comments="Requires Raiding Naxxramas. Is not included in the RXP guides" },
 	[7490] = { id=7490, name="Victory for the Horde", baseexp=14300, exp=0, qlvl=60, type="turnin", reqItems="18422-1", routes="Main,Strat,Solo", routeSection="Orgrimmar", areaType="Raid", area="Onyxia's Lair", },
 	[7491] = { id=7491, name="For All To See", baseexp=14300, exp=0, qlvl=60, type="turnin", reqItems="18422-1", ignoreReqItemsForPrep=1, routes="Main,Strat,Solo", routeSection="Orgrimmar", areaType="Raid", area="Onyxia's Lair", },
 	[7783] = { id=7783, name="The Lord of Blackrock", baseexp=14300, exp=0, qlvl=60, type="turnin", reqItems="19002-1", routes="Main,Strat,Solo", routeSection="Orgrimmar", areaType="Raid", area="Blackwing Lair", },
@@ -320,6 +320,7 @@ local questsMetadata = {
 	[2721] = { id=2721, name="Kirith", baseexp=9000, exp=0, qlvl=58, type="turnin", preQuests="2784,2621,2622,2623,2801,2681", routes="Main,Strat,Solo", routeSection="oldhero", areaType="Zone", area="Blasted Lands", comments="The mob has a long respawntime (5-9min). Check if the elite or the spirit is up, you can target it from cave entrance. If it's not up, skip it" },
 	[2743] = { id=2743, name="The Cover of Darkness", baseexp=4750, exp=0, qlvl=60, type="turnin", preQuests="2784,2621,2622,2623,2801,2681", routes="Main,Strat,Solo", routeSection="oldhero", areaType="Zone", area="Blasted Lands", comments="The mob has a long respawntime (5-9min). Check if the elite or the spirit is up, you can target it from cave entrance. If it's not up, skip it" },
 	[3761] = { id=3761, name="Un'Goro Soil", baseexp=6800, exp=0, qlvl=50, type="turnin", reqItems="11018-20", routes="Main,Strat,Solo", routeSection="ThunderBluff", areaType="Zone", area="Thunder Bluff", comments="This quest gives very little XP. You can skip it, but it's included for completeness" },
+	[4023] = { id=4023, name="A Taste of Flame", baseexp=7900, exp=0, qlvl=54, type="turnin", reqItems="10575-1", routes="Main,Strat", routeSection="BurningSteppes2", areaType="Zone", area="Burning Steppes", comments="This quest gives very little XP. You can skip it, but it's included for completeness" },
 }
 
 local preQuestMetadata = {
